RESOLVED FIXED276739
Fix call conditions for callDivModHelper
https://bugs.webkit.org/show_bug.cgi?id=276739
Summary Fix call conditions for callDivModHelper
Angelos Oikonomopoulos
Reported 2024-07-17 14:35:01 PDT
We need to use it for both Int64 and Int32.
Attachments
Angelos Oikonomopoulos
Comment 1 2024-07-17 14:38:19 PDT
EWS
Comment 2 2024-07-18 01:02:57 PDT
Committed 281078@main (763fae7003a7): <https://commits.webkit.org/281078@main> Reviewed commits have been landed. Closing PR #30922 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-07-18 01:03:14 PDT
Note You need to log in before you can comment on or make changes to this bug.