Fix call conditions for callDivModHelper https://bugs.webkit.org/show_bug.cgi?id=276739

Reviewed by Justin Michaud.

We need to use callDivModHelper both for Int64 and Int32 values.

While here, try to avoid #ifdefs in the middle of a function body and
also opt in to the existing implementation for FMin/FMax.

* Source/JavaScriptCore/b3/B3LowerMacros.cpp:

Canonical link: https://commits.webkit.org/281078@main